# LavaScript

./: .gitignore  Cargo.toml  README.md  bnf.bnf  errors.js  grammar.abnf  main.lava  main.ls
docs/: complex_expr.lava  fibonacci.lava  grammar.abnf  main.lava
src/: main.rs
src/ast/: decl.rs  expr.rs  mod.rs  printer.rs  span.rs  stmt.rs  types.rs  visitor.rs
src/codegen/: class.rs  core.rs  expr.rs  fun.rs  mod.rs  stmt.rs
src/lexer/: error.rs  mod.rs  span.rs  token.rs
src/parser/: core.rs  decl.rs  error.rs  expr.rs  mod.rs  stmt.rs  types.rs
